@@ -5,8 +5,10 @@ import static java.lang.Math.min;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -19,41 +21,41 @@ import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
 public final class PhasedEvidence implements Comparable<PhasedEvidence>
 {
     private final List<Integer> mAminoAcidLoci;
-    private final Map<String,Integer> mEvidenceMap;
+    private final Map<String, Integer> mEvidenceMap;
     private final int mHashCode;
 
-    public PhasedEvidence(final int[] aminoAcidIndices, final Map<String,Integer> evidence)
+    public PhasedEvidence(final int[] aminoAcidIndices, final Map<String, Integer> evidence)
     {
         mAminoAcidLoci = Lists.newArrayList();
-        Arrays.stream(aminoAcidIndices).forEach(x -> mAminoAcidLoci.add(x));
+        Arrays.stream(aminoAcidIndices).forEach(mAminoAcidLoci::add);
         mEvidenceMap = evidence;
         mHashCode = mAminoAcidLoci.hashCode();
     }
 
-    public PhasedEvidence(final List<Integer> aminoAcidLoci, final Map<String,Integer> evidence)
+    public PhasedEvidence(final List<Integer> aminoAcidLoci, final Map<String, Integer> evidence)
     {
         mAminoAcidLoci = aminoAcidLoci;
         mEvidenceMap = evidence;
         mHashCode = mAminoAcidLoci.hashCode();
     }
 
-    public final List<Integer> getAminoAcidLoci() { return mAminoAcidLoci; }
+    public List<Integer> getAminoAcidLoci() { return mAminoAcidLoci; }
 
-    public final Map<String,Integer> getEvidence()
+    public Map<String, Integer> getEvidence()
     {
         return mEvidenceMap;
     }
 
-    private boolean consistentWithAny(final List<HlaSequenceLoci> candidates, final String sequence)
+    private boolean consistentWithAny(final Collection<HlaSequenceLoci> candidates, final String sequence)
     {
         return candidates.stream().anyMatch(x -> x.consistentWith(sequence, mAminoAcidLoci));
     }
 
-    public PhasedEvidence inconsistentEvidence(final List<HlaSequenceLoci> candidates)
+    public PhasedEvidence inconsistentEvidence(final Collection<HlaSequenceLoci> candidates)
     {
-        Map<String,Integer> filteredEvidence = mEvidenceMap.entrySet().stream()
+        Map<String, Integer> filteredEvidence = mEvidenceMap.entrySet().stream()
                 .filter(x -> !consistentWithAny(candidates, x.getKey()))
-                .collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
         return new PhasedEvidence(mAminoAcidLoci, filteredEvidence);
     }
@@ -86,7 +88,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return indices;
     }
 
-    private final int unambiguousTailLength()
+    private int unambiguousTailLength()
     {
         int endIndex = mAminoAcidLoci.size();
 
@@ -94,7 +96,9 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         {
             int startIndex = endIndex - i - 1;
 
-            Set<String> evidenceTails = mEvidenceMap.keySet().stream().map(x -> x.substring(startIndex, endIndex)).collect(Collectors.toSet());
+            Set<String> evidenceTails = mEvidenceMap.keySet().stream()
+		    .map(x -> x.substring(startIndex, endIndex))
+		    .collect(Collectors.toSet());
 
             if(evidenceTails.size() == mEvidenceMap.size())
                 return i + 1;
@@ -103,7 +107,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return mAminoAcidLoci.size();
     }
 
-    private final int unambiguousHeadLength()
+    private int unambiguousHeadLength()
     {
         for(int i = 0; i < mAminoAcidLoci.size(); ++i)
         {
@@ -117,32 +121,31 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return mAminoAcidLoci.size();
     }
 
-    public final boolean contains(final PhasedEvidence other)
+    public boolean contains(final PhasedEvidence other)
     {
-        Set<Integer> overlapIndices = Sets.newHashSet();
-        mAminoAcidLoci.forEach(x -> overlapIndices.add(x));
-        other.getAminoAcidLoci().forEach(x -> overlapIndices.add(x));
+        Set<Integer> overlapIndices = Sets.newHashSet(mAminoAcidLoci);
+        overlapIndices.addAll(other.mAminoAcidLoci);
 
         int overlapCount = overlapIndices.size();
-        return overlapCount == other.getAminoAcidLoci().size();
+        return overlapCount == other.mAminoAcidLoci.size();
     }
 
-    public final int minEvidence()
+    private int minEvidence()
     {
         return mEvidenceMap.values().stream().mapToInt(x -> x).min().orElse(0);
     }
 
-    public final int totalEvidence()
+    public int totalEvidence()
     {
         return mEvidenceMap.values().stream().mapToInt(x -> x).sum();
     }
 
-    public final PhasedEvidence removeSingles(int minTotalEvidence)
+    public PhasedEvidence removeSingles(int minTotalEvidence)
     {
         if(totalEvidence() >= minTotalEvidence)
         {
             Map<String, Integer> newEvidence = mEvidenceMap.entrySet().stream()
-                    .filter(x -> x.getValue() > 1).collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
+                    .filter(x -> x.getValue() > 1).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
             return new PhasedEvidence(mAminoAcidLoci, newEvidence);
         }
@@ -150,6 +153,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return this;
     }
 
+    @Override
     public String toString()
     {
         int uniqueTail = unambiguousTailLength();
@@ -189,6 +193,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return 0;
     }
 
+    @Override
     public boolean equals(final Object other)
     {
         if(this == other)
@@ -197,29 +202,20 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         if(!(other instanceof PhasedEvidence))
             return false;
 
-        final List<Integer> otherIndices = ((PhasedEvidence)other).getAminoAcidLoci();
-
-        if(mAminoAcidLoci.size() != otherIndices.size())
-            return false;
-
-        for(int i = 0; i < mAminoAcidLoci.size(); ++i)
-        {
-            if(mAminoAcidLoci.get(i) != otherIndices.get(i))
-                return false;
-        }
-
-        return true;
+        final List<Integer> otherIndices = ((PhasedEvidence) other).mAminoAcidLoci;
+        return Objects.equals(mAminoAcidLoci, otherIndices);
     }
 
+    @Override
     public int hashCode()
     {
         return mHashCode;
     }
 
-    public static PhasedEvidence evidence(final List<Fragment> fragments, final List<Integer> indices)
+    public static PhasedEvidence evidence(final Collection<Fragment> fragments, final List<Integer> indices)
     {
-        List<Fragment> filteredFragments = fragments.stream().filter(x -> x.containsAminoAcidLoci(indices)).collect(Collectors.toList());
-        final Map<String,Integer> evidence = Maps.newHashMap();
+        List<Fragment> filteredFragments = fragments.stream().filter(x -> x.containsAminoAcidLoci(indices)).toList();
+        final Map<String, Integer> evidence = Maps.newHashMap();
 
         for(Fragment fragment : filteredFragments)
         {
@@ -231,15 +227,16 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return new PhasedEvidence(indices, evidence);
     }
 
-    public static void logInconsistentEvidence(final String gene, final List<PhasedEvidence> evidence, final List<HlaSequenceLoci> candidates)
+    public static void logInconsistentEvidence(final String gene, final Iterable<PhasedEvidence> evidence,
+            final Collection<HlaSequenceLoci> candidates)
     {
-        List<HlaSequenceLoci> expectedSequences = candidates.stream().filter(x -> x.Allele.Gene.equals(gene)).collect(Collectors.toList());
+        List<HlaSequenceLoci> expectedSequences = candidates.stream().filter(x -> x.Allele.Gene.equals(gene)).toList();
 
-        for (HlaSequenceLoci sequence : expectedSequences)
+        for(HlaSequenceLoci sequence : expectedSequences)
         {
-            for (PhasedEvidence phasedEvidence : evidence)
+            for(PhasedEvidence phasedEvidence : evidence)
             {
-                if (!sequence.consistentWith(phasedEvidence))
+                if(!sequence.consistentWith(phasedEvidence))
                 {
                     LL_LOGGER.debug("actual allele {} filtered by {}", sequence.Allele, phasedEvidence);
                 }
